--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Echo</title>
+    <link rel="icon" href="/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      href="/apple-touch-icon-180x180.png"
+      sizes="180x180"
+    />
+    <link
+      rel="mask-icon"
+      href="/mask-icon.svg"
+      color="hsl(--142.1, 76.2%, 36.3%)"
+    />
+    <meta name="theme-color" content="hsl(--142.1, 76.2%, 36.3%)" />
     <style>
       @import url("https://fonts.cdnfonts.com/css/helvetica-neue-55");
     </style>
